style.css
@import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
@import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
@import url(https://fonts.googleapis.com/css?family=Droid+Sans:400,700,400italic);
@import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);

#home {
  width: 100px;
  position: absolute;
  z-index: 5;
  display: none;
}
textarea {
  display: none;
}
header {
  display: flex;
  flex-wrap: wrap;
  z-index: 4;
  position: relative;
}
header.big {
  font-size: 32px;
  margin: 2em;
}
header.big a,
header.big span {
  flex: 0 0 auto;
}
header a,
header span {
  font-family: "Droid Sans", sans-serif;
  font-weight: bold;
  color: #333;
  display: block;
  padding: 0.4em 0.8em 0.4em 0.8em;
  margin: 0.2em;
  background-color: white;
  text-decoration: none;
  border: 0.05em solid #888;
  border-radius: 0.3em;
  box-shadow: -0.05em -0.02em 0.2em 0.02em #ddd;
}
header a:hover {
  box-shadow: -0.05em 0.02em 0.2em 0.02em #999;
}
header span {
  color: #bbb;
  border: 0.05em solid #ddd;
}

body {
  font-family: "Droid Serif";
}
h1,
h2,
h3 {
  font-family: "Yanone Kaffeesatz";
  font-weight: normal;
}
.remark-inline-code,
.remark-code-line {
  font-family: "Ubuntu Mono";
  background-color: #e5f1ff;
  padding: 5px;
}
.agenda h1 {
  margin-bottom: 0px;
}
.agenda ul {
  margin-block-start: 0;
  color: #666;
}

img {
  width: 100%;
}

.floatRight img {
  width: 50%;
  float: right;
}

.animate img {
  width: 210px;
  animation-duration: 3s;
  animation-name: rise;
}

@keyframes rise {
  from {
    margin-top: 60%;
    margin-left: 100%;
  }
  to {
    margin-top: 0%;
  }
}

